Fix use of badge in navbar on firefox and add dropdown for language Refs #0026847

--- a/app/assets/stylesheets/main/layout.css.scss
+++ b/app/assets/stylesheets/main/layout.css.scss
@@ -47,22 +47,20 @@ ol.breadcrumb{
         }
     }
 
-    .language{
-        width: 40px;
-    }
-    
-    .language.selected
-    {
-        border-bottom: 1px solid white;
+    .dropdown.languages{
+        .dropdown-menu{ 
+            min-width: 56px;
+        }
     }
 
-    .dropdown-menu{
-        min-width: 230px;
-        
-        .badge{
-            background-color: #DADADA
+    .dropdown.datas{
+        .dropdown-menu{ 
+
+            .badge{
+                background-color: #DADADA
+            }
         }
-    } 
+    }   
 }
 
 #footer{
